# ingsw-titilda-tools

./: .gitignore
card-mapping-tool/: .gitignore  README.md  pyproject.toml
card-mapping-tool/card_mapping_tool/: __main__.py  convert_schema.py
